--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
 
 <P>
-    I'm a Senior Lecturer (as Associate Professor) in the Computer Science department in The University of Manchester.
+    I'm a Senior Lecturer (Associate Professor) in the Computer Science department in The University of Manchester.
     Before that, I was a Lecturer in The University of Manchester (from Nov 2022), a Senior Researcher in University of Oxford (with <A href="http://www.cs.ox.ac.uk/ian.horrocks/">Prof. Ian Horrocks</A> from Nov 2017), and worked shortly as a postdoctoral in Heidelberg University.
     My PhD and bachelor degree were both awarded in Zhejiang University on Computer Science and Technology in 2016 and 2011, respectively. I was a visiting PhD student of Department of Informatics, Zurich University from 2014 to 2015.
 </P>
@@ -48,10 +48,11 @@
     <h4 style="color: #d90909;">Latest News!</h4>
     <p>
         <ul>
+    <li style="margin-bottom:5px">19 Jul: two papers accepted in ISWC 2025</li>
     <li style="margin-bottom:5px">31 Jul - 08 Aug: visit University of Toronto, attend KDD 2025</li>
     <li style="margin-bottom:5px">20 Jul: attend ICDCS 2025 in Glasgow</li>
-    <li style="margin-bottom:5px">01/06/2025: attend ESWC 2025</li>
     <!--
+    <li style="margin-bottom:5px">01/06/2025: attend ESWC 2025</li>
     <li style="margin-bottom:5px">15/05/2025: two papers accepted in ACL 2025</li>
     <li style="margin-bottom:5px">05/04/2025: the ontology embedding survey accepted by IEEE TKDE</li>
     <li style="margin-bottom:5px">19/05/2025: Promoted to Senior Lecturer (Associate Professor)</li>
@@ -93,19 +94,19 @@ Research Interests
 <h4>Research Grants</h4>
 <p><ul>
     <li style="margin-bottom:5px">
-        EPSRC New Investigator Award "OntoEm: Semantic Embeddings for Ontologies" (EP/Y017706/1), 427.9K GBP, 12/2023 - 11/2026, PI.
+        EPSRC New Investigator Award "OntoEm: Semantic Embeddings for Ontologies" (EP/Y017706/1), 12/2023 - 11/2026, PI.
     </li>
     <li style="margin-bottom:5px">
-        The Manchester-Melbourne-Toronto (MMT) Research Fund, "AI-Driven Solutions for Child Protection: Utilizing LLMs and Knowledge Graph" (collaborative research initiatives), 9K GBP + 14K CAD, 10/2024 - 03/2026, PI with Jia Xue from University of Toronto.
+        The Manchester-Melbourne-Toronto (MMT) Research Fund, "AI-Driven Solutions for Child Protection: Utilizing LLMs and Knowledge Graph" (collaborative research initiatives), 10/2024 - 03/2026, PI with Jia Xue from University of Toronto.
     </li>
      <li style="margin-bottom:5px">
-        EPSRC "ConCur: Knowledge Graph Construction and Curation" (EP/V050869/1), 1.1M GBP, 12/2021 - 05/2025, Research Co-Investigator.
+        EPSRC "ConCur: Knowledge Graph Construction and Curation" (EP/V050869/1), 12/2021 - 05/2025, Research Co-Investigator.
     </li>
     <li style="margin-bottom:5px">
-        Turing Innovation Catalyst Manchester (TICM) funded Collaborative R&D Project "Multi-modal Semantic Search with Ontologies and Modern AI Techniques", 30.6K GBP, 07/2024 - 01/2025, PI.
+        Turing Innovation Catalyst Manchester (TICM) funded Collaborative R&D Project "Multi-modal Semantic Search with Ontologies and Modern AI Techniques", 07/2024 - 01/2025, PI.
     </li>
     <li style="margin-bottom:5px">
-        Turing-Manchester Feasibility Project "Knowledge Graph for Explainability, Guidance and Human-in-the-loop in Machine Learning", 19K GBP, 11/2022 - 04/2023, PI.
+        Turing-Manchester Feasibility Project "Knowledge Graph for Explainability, Guidance and Human-in-the-loop in Machine Learning", 11/2022 - 04/2023, PI.
     </li>
     <!--
     <li style="margin-bottom:5px">
@@ -143,11 +144,12 @@ Research Interests
 </ul></p>
 
 <h4>Publications</h4>
-<p>&nbsp  &nbsp  &nbsp <A href="https://scholar.google.co.uk/citations?hl=en&user=5Cy4z8wAAAAJ&view_op=list_works">Google Scholar</A>, <A href="https://dblp.org/pid/56/8110-1.html">DBLP</A>, <A href="./files/CV_Jiaoyan.pdf#page=6">Selected</A></p>
+<p>&nbsp  &nbsp  &nbsp <A href="https://scholar.google.co.uk/citations?hl=en&user=5Cy4z8wAAAAJ&view_op=list_works">Google Scholar</A>, <A href="https://dblp.org/pid/56/8110-1.html">DBLP</A>, <A href="./files/CV_Jiaoyan.pdf#page=7">Selected</A></p>
 
 <h4>Selective Invited Talks and Tutorials</h4>
     <ul>
 
+        <li style="margin-bottom:5px">Integrating Knowledge Graphs and Large Language Models for Advancing Scientific Research. Tutorial at ICDCS 2025, Glasgow, UK. 20/07/2025. <A href="files/ICDCS_KG_LLM_Tutorial_V2.pdf">Slides</A></li>
         <li style="margin-bottom:5px">Ontology Embedding and Construction in the Large Language Model Era. Invited Talk in Southeast University, Nanjing. 10/01/2025. <A href="files/SEU_Report_Jan10.pdf">Slides</A></li>
         <li style="margin-bottom:5px">Integrating Knowledge Graphs and Large Language Models for Advancing Scientific Research. Tutorial at Learning on Graph Conference (LoG), 26/11/2024. <A href="files/LoG_Tutorial.pdf">Slides</A></li>
     <li style="margin-bottom:5px">Data Intensive Question Answering with Large Language Models. Invited Talk at University of Stuttgart. 31/10/2024. <A href="files/QA_LLM_Stuttgart_10_2024.pdf">Slides</A></li>
