--- a/index.html
+++ b/index.html
@@ -48,10 +48,13 @@
     <h4 style="color: #d90909;">Latest News!</h4>
     <p>
         <ul>
+    <li style="margin-bottom:5px">12 Sep: attend the 4th Annual Symposium of The Turing Interest Group on Knowledge Graphs in London</li>
+    <li style="margin-bottom:5px">2 Sep: attend VLDB 2025 in London</li>
+    <li style="margin-bottom:5px">22 Aug: one paper accepted in EMNLP 2025 Main</li>
     <li style="margin-bottom:5px">19 Jul: two papers accepted in ISWC 2025</li>
+    <!--
     <li style="margin-bottom:5px">31 Jul - 08 Aug: visit University of Toronto, attend KDD 2025</li>
     <li style="margin-bottom:5px">20 Jul: attend ICDCS 2025 in Glasgow</li>
-    <!--
     <li style="margin-bottom:5px">01/06/2025: attend ESWC 2025</li>
     <li style="margin-bottom:5px">15/05/2025: two papers accepted in ACL 2025</li>
     <li style="margin-bottom:5px">05/04/2025: the ontology embedding survey accepted by IEEE TKDE</li>
