--- a/index.html
+++ b/index.html
@@ -48,10 +48,10 @@
     <h4 style="color: #d90909;">Latest News!</h4>
     <p>
         <ul>
-    <li style="margin-bottom:5px">12 Sep: attend the 4th Annual Symposium of The Turing Interest Group on Knowledge Graphs in London</li>
-    <li style="margin-bottom:5px">2 Sep: attend VLDB 2025 in London</li>
+    <li style="margin-bottom:5px">12 Sep: to attend the 4th Annual Symposium of The Turing Interest Group on Knowledge Graphs in London</li>
+    <li style="margin-bottom:5px">2 Sep: to attend VLDB 2025 in London</li>
     <li style="margin-bottom:5px">22 Aug: one paper accepted in EMNLP 2025 Main</li>
-    <li style="margin-bottom:5px">19 Jul: two papers accepted in ISWC 2025</li>
+    <li style="margin-bottom:5px">19 Jul: two papers accepted in ISWC 2025 Research Track</li>
     <!--
     <li style="margin-bottom:5px">31 Jul - 08 Aug: visit University of Toronto, attend KDD 2025</li>
     <li style="margin-bottom:5px">20 Jul: attend ICDCS 2025 in Glasgow</li>
