--- a/index.html
+++ b/index.html
@@ -40,19 +40,19 @@
 
 
 <P>
-    I'm a Senior Lecturer (Associate Professor) in the Computer Science department in The University of Manchester.
-    Before that, I was a Lecturer in The University of Manchester (from Nov 2022), a Senior Researcher in University of Oxford (with <A href="http://www.cs.ox.ac.uk/ian.horrocks/">Prof. Ian Horrocks</A> from Nov 2017), and worked shortly as a postdoctoral in Heidelberg University.
-    My PhD and bachelor degree were both awarded in Zhejiang University on Computer Science and Technology in 2016 and 2011, respectively. I was a visiting PhD student of Department of Informatics, Zurich University from 2014 to 2015.
+    Jiaoyan is a Senior Lecturer (Associate Professor) in Department of Computer Science, The University of Manchester.
+    Before that, he was a Lecturer in Manchester (from Nov 2022), a Senior Researcher in Department of Computer Science, University of Oxford (with <A href="http://www.cs.ox.ac.uk/ian.horrocks/">Prof. Ian Horrocks</A> from Nov 2017), and a postdoctoral in Heidelberg University.
+    Jiaoyan got his PhD and bachelor degrees both in Zhejiang University on Computer Science and Technology in 2016 and 2011, respectively. He was a visiting PhD in Department of Informatics, Zurich University from 2014 to 2015.
 </P>
 
-    <h4 style="color: #d90909;">Latest News!</h4>
+    <h4 style="color: #d90909;">News!</h4>
     <p>
         <ul>
-    <li style="margin-bottom:5px">1st Nov: to attend ISWC 2025 in Nara, Japan</li>
-    <li style="margin-bottom:5px">15 Oct: to attend IJCKG 2025 in Crete, Greece</li>
-    <li style="margin-bottom:5px">12 Sep: to attend the 4th Annual Symposium of The Turing Interest Group on Knowledge Graphs in London</li>
+    <li style="margin-bottom:5px">1 Nov: attend ISWC 2025 in Nara, Japan</li>
+    <li style="margin-bottom:5px">15 Oct: attend IJCKG 2025 in Crete, Greece</li>
     <li style="margin-bottom:5px">6 Sep: one paper on attributed QA accepted by TKDE</li>
     <!--
+    <li style="margin-bottom:5px">12 Sep: to attend the 4th Annual Symposium of The Turing Interest Group on Knowledge Graphs in London</li>
     <li style="margin-bottom:5px">2 Sep: to attend VLDB 2025 in London</li>
     <li style="margin-bottom:5px">22 Aug: one paper accepted in EMNLP 2025 Main</li>
     <li style="margin-bottom:5px">19 Jul: two papers accepted in ISWC 2025 Research Track</li>
@@ -91,28 +91,28 @@ Research Interests
 
 </p>
     <P>
-        &nbsp  &nbsp  &nbsp Please email me if you have interests in the following PhD projects <a href="https://www.cs.manchester.ac.uk/study/postgraduate-research/research-projects/description/?projectid=37800">RAG project</a>, <a href="https://www.findaphd.com/phds/project/knowledge-graph-for-large-language-model-explainability-and-evaluation/?p185828">LLM explanability and evaluation project</a>, or other topics.
+        &nbsp  &nbsp  &nbsp Please email me before applying online, if you have interests in the following PhD projects <a href="https://www.cs.manchester.ac.uk/study/postgraduate-research/research-projects/description/?projectid=37800">RAG project</a>, <a href="https://www.findaphd.com/phds/project/knowledge-graph-for-large-language-model-explainability-and-evaluation/?p185828">LLM explanability and evaluation project</a>, or other topics that fall into my scope.
     </P>
 
 
 <!-- <P>I am also <b>recruiting a 3-year postdoctoral</b> on knowledge graph and ontology in UoM. Email me your CV or apply <A href="https://www.jobs.manchester.ac.uk/Job/JobDetail?JobId=27858">here</A>.</P> -->
 
-<h4>Research Grants</h4>
+<h4>Recent Projects / Grants</h4>
 <p><ul>
     <li style="margin-bottom:5px">
-        EPSRC New Investigator Award "OntoEm: Semantic Embeddings for Ontologies" (EP/Y017706/1), 12/2023 - 11/2026, PI.
+        EPSRC New Investigator Award "OntoEm: Semantic Embeddings for Ontologies" (EP/Y017706/1), 2023 - 2026, PI.
     </li>
     <li style="margin-bottom:5px">
-        The Manchester-Melbourne-Toronto (MMT) Research Fund, "AI-Driven Solutions for Child Protection: Utilizing LLMs and Knowledge Graph" (collaborative research initiatives), 10/2024 - 03/2026, PI with Jia Xue from University of Toronto.
+        The Manchester-Melbourne-Toronto (MMT) Research Fund, "AI-Driven Solutions for Child Protection: Utilizing LLMs and Knowledge Graph" (collaborative research initiatives), 2024 - 2026, PI with Jia Xue from University of Toronto.
     </li>
      <li style="margin-bottom:5px">
-        EPSRC "ConCur: Knowledge Graph Construction and Curation" (EP/V050869/1), 12/2021 - 05/2025, Research Co-Investigator.
+        EPSRC "ConCur: Knowledge Graph Construction and Curation" (EP/V050869/1), 2021 - 2025, Research Co-Investigator.
     </li>
     <li style="margin-bottom:5px">
-        Turing Innovation Catalyst Manchester (TICM) funded Collaborative R&D Project "Multi-modal Semantic Search with Ontologies and Modern AI Techniques", 07/2024 - 01/2025, PI.
+        Turing Innovation Catalyst Manchester (TICM) funded Collaborative R&D Project "Multi-modal Semantic Search with Ontologies and Modern AI Techniques", 2024 - 2025, PI.
     </li>
     <li style="margin-bottom:5px">
-        Turing-Manchester Feasibility Project "Knowledge Graph for Explainability, Guidance and Human-in-the-loop in Machine Learning", 11/2022 - 04/2023, PI.
+        Turing-Manchester Feasibility Project "Knowledge Graph for Explainability, Guidance and Human-in-the-loop in Machine Learning", 2022 - 2023, PI.
     </li>
     <!--
     <li style="margin-bottom:5px">
@@ -131,9 +131,9 @@ Research Interests
     <li style="margin-bottom:5px">Associate Editor of Transactions on Graph Data and Knowledge (TGDK) (2023 - ).</li>
     <li style="margin-bottom:5px">Editor Board of Data Intelligence (2021 - ).</li>
     <li style="margin-bottom:5px">Membership of EPSRC Peer Review College (2023 - )</li>
-    <li style="margin-bottom:5px">Co-organiser of the OAEI Track <A href="https://www.cs.ox.ac.uk/isg/projects/ConCur/oaei/">Bio-ML</A> in ISWC (2022 - ). </li>
+    <li style="margin-bottom:5px">Co-organiser of the OAEI Track <A href="https://www.cs.ox.ac.uk/isg/projects/ConCur/oaei/">Bio-ML</A> in ISWC (2022 - 2024). </li>
     <li style="margin-bottom:5px">PC/SPC/Area Chair of ISWC, The Web Conference, NeurIPS, ARR, etc.</li>
-    <li style="margin-bottom:5px">Regular proposal reviewer for main research grant bodies in the UK and EU like ERC, DFG and NWO.</li>
+    <li style="margin-bottom:5px">Regular proposal reviewer for main research grant bodies in the UK and EU including ERC, DFG and NWO.</li>
 
     <!--
     <li style="margin-bottom:5px">Member of AMS Network on Neurosymbolic AI for Medicine (2024 - )</li>
@@ -186,7 +186,7 @@ Research Interests
 -->
 </ul></p>
 
-<h4>Current Research Students / Associates (Team)</h4>
+<h4>Current Research Students / Associates</h4>
 <p><ul>
     <li style="margin-bottom:5px"><a href="https://scholar.google.com/citations?hl=en&user=HqVFCscAAAAJ">Hui Yang</a> (Postdoctoral, 06/2024 - )</li>
     <li style="margin-bottom:5px">Hira Beril Kucuk (PhD, 04/2025 - )</li>
@@ -194,15 +194,18 @@ Research Interests
     <li style="margin-bottom:5px">Yiping Song (PhD, 04/2024 - )</li>
     <li style="margin-bottom:5px">Ian Hyland (half-time PhD, 04/2024 - )</li>
     <li style="margin-bottom:5px">Zhenyu Wu (PhD, 09/2022 - )</li>
-    </br>
     <li style="margin-bottom:5px">Tianzhe Zhao (visiting PhD from Xi'an Jiaotong University, 01/2024 - )</li>
+    <!--
    <li style="margin-bottom:5px">Balazs Mosolygo (externally co-supervised PhD, Department of Information Science and Media Studies, University of Bergen, 11/2023 - )</li>
+   -->
     </ul></p>
 
     <h4>Past Research Students / Associates</h4>
 <p>
     <ul>
+    <li style="margin-bottom:5px"><A href="https://www.cs.ox.ac.uk/people/hang.dong/">Hang Dong</A> (Postdoctoral, Department of Computer Science, University of Oxford, 2022 - 2024)</li>
     <li style="margin-bottom:5px"><A href="https://www.cs.ox.ac.uk/people/yuan.he/">Yuan He</A> (PhD, Department of Computer Science, University of Oxford, 2020 - 2024)</li>
+    <li style="margin-bottom:5px">Melis Kupeli (Research Assistant, Alliance Manchester Business School, The University of Manchester, 2022 - 2023)</li>
     <li style="margin-bottom:5px"><A href="https://genggengcss.github.io/">Yuxia Geng</A> (PhD, College of Computer Science and Technology, Zhejiang University, 2018 - 2023)</li>
     <li style="margin-bottom:5px"><A href="https://sirius-labs.no/erik-bryhn-myklebust-phd-candidate/">Erik Bryhn Myklebust</A> (PhD, NIVA & SIRIUS, University of OSLO, 2019 - 2022) (external co-supervisor)</li>
     <li style="margin-bottom:5px">Mathias Jackermeier (MSc, Department of Computer Science, University of Oxford, 2022)</li>
