--- a/index.html
+++ b/index.html
@@ -90,8 +90,13 @@ Research Interests
 </ul>
 
 </p>
+    <h4>
+        PhD / MPhil Recruiting
+</h4>
     <P>
-        &nbsp  &nbsp  &nbsp Please email me before applying online, if you have interests in the following PhD projects <a href="https://www.cs.manchester.ac.uk/study/postgraduate-research/research-projects/description/?projectid=37800">RAG project</a>, <a href="https://www.findaphd.com/phds/project/knowledge-graph-for-large-language-model-explainability-and-evaluation/?p185828">LLM explanability and evaluation project</a>, or other topics that fall into my scope.
+       Please email me before applying online, if you have interests in the following PhD projects <a href="https://www.cs.manchester.ac.uk/study/postgraduate-research/research-projects/description/?projectid=37800">RAG project</a>, <a href="https://www.cs.manchester.ac.uk/study/postgraduate-research/research-projects/description/?projectid=35920">LLM explanability and evaluation project</a>, or other topics that fall into my scope.
+        MPhil (research-oriented master, usually self-funded) applications are also welcomed.
+        As there are so many enquires and applicants, I will not be able to respond to all of them, but only those qualified (e.g., oversee PhD applicants require outstanding academic performance evidenced by more than one of the following: excellent transcripts, degree from top universities, top publications with key contributions, and outstanding final-year project mark). I apologize for that in advance.
     </P>
 
 
