--- a/index.html
+++ b/index.html
@@ -48,10 +48,12 @@
     <h4 style="color: #d90909;">News!</h4>
     <p>
         <ul>
-    <li style="margin-bottom:5px">1 Nov: attend ISWC 2025 in Nara, Japan</li>
-    <li style="margin-bottom:5px">15 Oct: attend IJCKG 2025 in Crete, Greece</li>
-    <li style="margin-bottom:5px">6 Sep: one paper on attributed QA accepted by TKDE</li>
+    <li style="margin-bottom:5px">10 Nov: visit Shanxi University and give a presentation</li>
+    <li style="margin-bottom:5px">2 Nov: attend ISWC 2025 in Nara, Japan</li>
+    <li style="margin-bottom:5px">1 Nov: one paper on knowledge graph and RAG accepted by Information Fusion</li>
     <!--
+    <li style="margin-bottom:5px">6 Sep: one paper on attributed QA accepted by TKDE</li>
+    <li style="margin-bottom:5px">15 Oct: attend IJCKG 2025 in Crete, Greece</li>
     <li style="margin-bottom:5px">12 Sep: to attend the 4th Annual Symposium of The Turing Interest Group on Knowledge Graphs in London</li>
     <li style="margin-bottom:5px">2 Sep: to attend VLDB 2025 in London</li>
     <li style="margin-bottom:5px">22 Aug: one paper accepted in EMNLP 2025 Main</li>
