--- a/index.html
+++ b/index.html
@@ -20,9 +20,11 @@
       <p><span class="extended-address">Office: 2.91, Kilburn Building</span>, <span class="street-address">Oxford Road</span>,
 <span class="locality">Manchester</span> <span class="postal-code">M13 9PL</span> <span>UK</span></p>
       <p>Email: firstname.lastname@manchester.ac.uk, firstname4ai@gmail.com</p>
-      <p><a href="https://www.research.manchester.ac.uk/portal/jiaoyan.chen.html">UoM Page</a>,  <a href="https://www.linkedin.com/in/jiaoyan-chen-00822b26/">LinkedIn</a>,
+      <p><a href="https://www.research.manchester.ac.uk/portal/jiaoyan.chen.html">Hive</a>,  <a href="https://www.linkedin.com/in/jiaoyan-chen-00822b26/">LinkedIn</a>,
           <!-- <a href="https://twitter.com/ChenJiaoyan1">Twitter</a>, <a href="https://bsky.app/profile/jiaoyanchen.bsky.social">BlueSky</a>, -->
-          <A href="./files/CV_Jiaoyan.pdf">CV</A> </p>
+          <A href="./files/CV_Jiaoyan.pdf">CV</A>,
+           <A href="https://scholar.google.co.uk/citations?hl=en&user=5Cy4z8wAAAAJ&view_op=list_works">Google Scholar</A>
+          </p>
       </div>
       <!--<h4>Tools</h4>
 
