--- a/index.html
+++ b/index.html
@@ -199,6 +199,7 @@ Research Interests
 <h4>Current Research Students / Associates</h4>
 <p><ul>
     <li style="margin-bottom:5px"><a href="https://scholar.google.com/citations?hl=en&user=HqVFCscAAAAJ">Hui Yang</a> (Postdoctoral, 06/2024 - )</li>
+    <li style="margin-bottom:5px">Jonathon Dilworth (Research Assistant, 07/2025 - )</li>
     <li style="margin-bottom:5px">Hira Beril Kucuk (PhD, 04/2025 - )</li>
     <li style="margin-bottom:5px">Hanhua Hong (PhD, 09/2024 - )</li>
     <li style="margin-bottom:5px">Yiping Song (PhD, 04/2024 - )</li>
