--- a/index.html
+++ b/index.html
@@ -51,9 +51,10 @@
     <p>
         <ul>
     <li style="margin-bottom:5px">10 Nov: visit Shanxi University and give a presentation</li>
-    <li style="margin-bottom:5px">2 Nov: attend ISWC 2025 in Nara, Japan</li>
+    <li style="margin-bottom:5px">9 Nov: one paper on benchmarking LLM reasoning accepted by AAAI'26</li>
     <li style="margin-bottom:5px">1 Nov: one paper on knowledge graph and RAG accepted by Information Fusion</li>
     <!--
+    <li style="margin-bottom:5px">2 Nov: attend ISWC 2025 in Nara, Japan</li>
     <li style="margin-bottom:5px">6 Sep: one paper on attributed QA accepted by TKDE</li>
     <li style="margin-bottom:5px">15 Oct: attend IJCKG 2025 in Crete, Greece</li>
     <li style="margin-bottom:5px">12 Sep: to attend the 4th Annual Symposium of The Turing Interest Group on Knowledge Graphs in London</li>
