--- a/index.html
+++ b/index.html
@@ -166,6 +166,7 @@ Research Interests
 <h4>Selective Invited Talks and Tutorials</h4>
     <ul>
 
+        <li style="margin-bottom:5px">Embedding Complex Knowledge: From Geometric to Language Models. Invited report in Shanxi University, Shanxi, China. 10/11/2025. <A href="files/Shanxi_Uni_Report_10Nov.pdf">Slides</A></li>
         <li style="margin-bottom:5px">Integrating Knowledge Graphs and Large Language Models for Advancing Scientific Research. Tutorial at ICDCS 2025, Glasgow, UK. 20/07/2025. <A href="files/ICDCS_KG_LLM_Tutorial_V2.pdf">Slides</A></li>
         <li style="margin-bottom:5px">Ontology Embedding and Construction in the Large Language Model Era. Invited Talk in Southeast University, Nanjing. 10/01/2025. <A href="files/SEU_Report_Jan10.pdf">Slides</A></li>
         <li style="margin-bottom:5px">Integrating Knowledge Graphs and Large Language Models for Advancing Scientific Research. Tutorial at Learning on Graph Conference (LoG), 26/11/2024. <A href="files/LoG_Tutorial.pdf">Slides</A></li>
