--- a/index.html
+++ b/index.html
@@ -50,10 +50,12 @@
     <h4 style="color: #d90909;">News!</h4>
     <p>
         <ul>
+    <li style="margin-bottom:5px">3 Dec: give a seminar in Ulster University</li>
+    <li style="margin-bottom:5px">6 Nov: become Poster, Demo & Lightning Talk Chair of ISWC 2026</li>
+    <!--
     <li style="margin-bottom:5px">10 Nov: visit Shanxi University and give a presentation</li>
     <li style="margin-bottom:5px">9 Nov: one paper on benchmarking LLM reasoning accepted by AAAI'26</li>
     <li style="margin-bottom:5px">1 Nov: one paper on knowledge graph and RAG accepted by Information Fusion</li>
-    <!--
     <li style="margin-bottom:5px">2 Nov: attend ISWC 2025 in Nara, Japan</li>
     <li style="margin-bottom:5px">6 Sep: one paper on attributed QA accepted by TKDE</li>
     <li style="margin-bottom:5px">15 Oct: attend IJCKG 2025 in Crete, Greece</li>
