--- a/index.html
+++ b/index.html
@@ -20,10 +20,11 @@
       <p><span class="extended-address">Office: 2.91, Kilburn Building</span>, <span class="street-address">Oxford Road</span>,
 <span class="locality">Manchester</span> <span class="postal-code">M13 9PL</span> <span>UK</span></p>
       <p>Email: firstname.lastname@manchester.ac.uk, firstname4ai@gmail.com</p>
-      <p><a href="https://www.research.manchester.ac.uk/portal/jiaoyan.chen.html">Hive</a>,  <a href="https://www.linkedin.com/in/jiaoyan-chen-00822b26/">LinkedIn</a>,
+      <p><a href="https://www.research.manchester.ac.uk/portal/jiaoyan.chen.html">Home</a>,  <a href="https://www.linkedin.com/in/jiaoyan-chen-00822b26/">LinkedIn</a>,
           <!-- <a href="https://twitter.com/ChenJiaoyan1">Twitter</a>, <a href="https://bsky.app/profile/jiaoyanchen.bsky.social">BlueSky</a>, -->
           <A href="./files/CV_Jiaoyan.pdf">CV</A>,
-           <A href="https://scholar.google.co.uk/citations?hl=en&user=5Cy4z8wAAAAJ&view_op=list_works">Google Scholar</A>
+           <A href="https://scholar.google.co.uk/citations?hl=en&user=5Cy4z8wAAAAJ&view_op=list_works">Google Scholar</A>,
+          <A href="https://dblp.org/pid/56/8110-1.html">DBLP</A>
           </p>
       </div>
       <!--<h4>Tools</h4>
@@ -113,7 +114,7 @@ Research Interests
 <h4>Recent Projects / Grants</h4>
 <p><ul>
     <li style="margin-bottom:5px">
-        EPSRC New Investigator Award "OntoEm: Semantic Embeddings for Ontologies" (EP/Y017706/1), 2023 - 2026, PI.
+        EPSRC New Investigator Award "OntoEm: Semantic Embeddings for Ontologies" (EP/Y017706/1), 2024 - 2027, PI.
     </li>
     <li style="margin-bottom:5px">
         The Manchester-Melbourne-Toronto (MMT) Research Fund, "AI-Driven Solutions for Child Protection: Utilizing LLMs and Knowledge Graph" (collaborative research initiatives), 2024 - 2026, PI with Jia Xue from University of Toronto.
