--- a/index.html
+++ b/index.html
@@ -44,18 +44,20 @@
 
 <P>
     Jiaoyan is a Senior Lecturer (Associate Professor) in Department of Computer Science, The University of Manchester.
-    Before that, he was a Lecturer in Manchester (from Nov 2022), a Senior Researcher in Department of Computer Science, University of Oxford (with <A href="http://www.cs.ox.ac.uk/ian.horrocks/">Prof. Ian Horrocks</A> from Nov 2017), and a postdoctoral in Heidelberg University.
-    Jiaoyan got his PhD and bachelor degrees both in Zhejiang University on Computer Science and Technology in 2016 and 2011, respectively. He was a visiting PhD in Department of Informatics, Zurich University from 2014 to 2015.
+    Before that, he was a Lecturer in Manchester from 2022, a Senior Researcher in Department of Computer Science, University of Oxford from 2017 (with <A href="http://www.cs.ox.ac.uk/ian.horrocks/">Prof. Ian Horrocks</A>), and a postdoctoral in Heidelberg University.
+    Jiaoyan got his PhD and bachelor degrees both in Zhejiang University on Computer Science and Technology. He was a visiting PhD in Department of Informatics, Zurich University from 2014 to 2015.
 </P>
 
     <h4 style="color: #d90909;">News!</h4>
     <p>
         <ul>
+    <li style="margin-bottom:5px">4 Jan: one paper on RAG with incomplete KG accepted by EACL'26</li>
+    <li style="margin-bottom:5px">9 Dec: take an Associate Editor role for The Knowledge Engineering Review</li>
     <li style="margin-bottom:5px">3 Dec: give a seminar in Ulster University</li>
     <li style="margin-bottom:5px">9 Nov: one paper on benchmarking LLM reasoning accepted by AAAI'26</li>
+    <!--
     <li style="margin-bottom:5px">6 Nov: become Poster, Demo & Lightning Talk Chair of ISWC 2026</li>
     <li style="margin-bottom:5px">1 Nov: one paper on knowledge graph and RAG accepted by Information Fusion</li>
-    <!--
     <li style="margin-bottom:5px">10 Nov: visit Shanxi University and give a presentation</li>
     <li style="margin-bottom:5px">2 Nov: attend ISWC 2025 in Nara, Japan</li>
     <li style="margin-bottom:5px">6 Sep: one paper on attributed QA accepted by TKDE</li>
@@ -142,7 +144,8 @@ Research Interests
 
 <h4>Recent Services</h4>
 <p><ul>
-    <li style="margin-bottom:5px">Associate Editor of Transactions on Graph Data and Knowledge (TGDK) (2023 - ).</li>
+    <li style="margin-bottom:5px">Associate Editor of <a href="https://maxapress.com/ker">The Knowledge Engineering Review</a>  (KER) (2025 - ).</li>
+    <li style="margin-bottom:5px">Associate Editor of <a href="https://drops.dagstuhl.de/entities/journal/TGDK">Transactions on Graph Data and Knowledge</a> (TGDK) (2023 - ).</li>
     <li style="margin-bottom:5px">Editor Board of Data Intelligence (2021 - ).</li>
     <li style="margin-bottom:5px">Membership of EPSRC Peer Review College (2023 - )</li>
     <li style="margin-bottom:5px">Co-organiser of the OAEI Track <A href="https://www.cs.ox.ac.uk/isg/projects/ConCur/oaei/">Bio-ML</A> in ISWC (2022 - 2024). </li>
@@ -204,13 +207,14 @@ Research Interests
 <h4>Current Research Students / Associates</h4>
 <p><ul>
     <li style="margin-bottom:5px"><a href="https://scholar.google.com/citations?hl=en&user=HqVFCscAAAAJ">Hui Yang</a> (Postdoctoral, 06/2024 - )</li>
-    <li style="margin-bottom:5px">Jonathon Dilworth (Research Assistant, 07/2025 - )</li>
+    <li style="margin-bottom:5px"><a href="https://www.linkedin.com/in/jondilworth/">Jonathon Dilworth</a> (Research Assistant, 07/2025 - )</li>
+    <li style="margin-bottom:5px">Beiyu Xu (PhD, 01/2026 - )</li>
     <li style="margin-bottom:5px">Hira Beril Kucuk (PhD, 04/2025 - )</li>
     <li style="margin-bottom:5px">Hanhua Hong (PhD, 09/2024 - )</li>
     <li style="margin-bottom:5px">Yiping Song (PhD, 04/2024 - )</li>
     <li style="margin-bottom:5px">Ian Hyland (half-time PhD, 04/2024 - )</li>
     <li style="margin-bottom:5px">Zhenyu Wu (PhD, 09/2022 - )</li>
-    <li style="margin-bottom:5px">Tianzhe Zhao (visiting PhD from Xi'an Jiaotong University, 01/2024 - )</li>
+
     <!--
    <li style="margin-bottom:5px">Balazs Mosolygo (externally co-supervised PhD, Department of Information Science and Media Studies, University of Bergen, 11/2023 - )</li>
    -->
@@ -219,6 +223,7 @@ Research Interests
     <h4>Past Research Students / Associates</h4>
 <p>
     <ul>
+    <li style="margin-bottom:5px">Tianzhe Zhao (visiting PhD from Xi'an Jiaotong University, 2024 - 2025)</li>
     <li style="margin-bottom:5px"><A href="https://www.cs.ox.ac.uk/people/hang.dong/">Hang Dong</A> (Postdoctoral, Department of Computer Science, University of Oxford, 2022 - 2024)</li>
     <li style="margin-bottom:5px"><A href="https://www.cs.ox.ac.uk/people/yuan.he/">Yuan He</A> (PhD, Department of Computer Science, University of Oxford, 2020 - 2024)</li>
     <li style="margin-bottom:5px">Melis Kupeli (Research Assistant, Alliance Manchester Business School, The University of Manchester, 2022 - 2023)</li>
