--- a/index.html
+++ b/index.html
@@ -51,11 +51,12 @@
     <h4 style="color: #d90909;">News!</h4>
     <p>
         <ul>
+    <li style="margin-bottom:5px">13 Jan: one paper on LLM-based KG embedding and one paper on LLM for OWL reasoning accepted by WWW'26 (will attend)</li>
     <li style="margin-bottom:5px">4 Jan: one paper on RAG with incomplete KG accepted by EACL'26</li>
     <li style="margin-bottom:5px">9 Dec: take an Associate Editor role for The Knowledge Engineering Review</li>
+    <!--
     <li style="margin-bottom:5px">3 Dec: give a seminar in Ulster University</li>
     <li style="margin-bottom:5px">9 Nov: one paper on benchmarking LLM reasoning accepted by AAAI'26</li>
-    <!--
     <li style="margin-bottom:5px">6 Nov: become Poster, Demo & Lightning Talk Chair of ISWC 2026</li>
     <li style="margin-bottom:5px">1 Nov: one paper on knowledge graph and RAG accepted by Information Fusion</li>
     <li style="margin-bottom:5px">10 Nov: visit Shanxi University and give a presentation</li>
