--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 	<h4>Contact Information</h4>
       <div class="adr">
       <p><span class="extended-address">Office: 2.91, Kilburn Building</span>, <span class="street-address">Oxford Road</span>,
-<span class="locality">Manchester</span> <span class="postal-code">M13 9PL</span> <span>UK</span></p>
+<span class="locality">Manchester</span>, <span class="postal-code">UK</span>, <span>M13 9PL</span></p>
       <p>Email: firstname.lastname@manchester.ac.uk, firstname4ai@gmail.com</p>
       <p><a href="https://www.research.manchester.ac.uk/portal/jiaoyan.chen.html">Home</a>,  <a href="https://www.linkedin.com/in/jiaoyan-chen-00822b26/">LinkedIn</a>,
           <!-- <a href="https://twitter.com/ChenJiaoyan1">Twitter</a>, <a href="https://bsky.app/profile/jiaoyanchen.bsky.social">BlueSky</a>, -->
@@ -43,7 +43,7 @@
 
 
 <P>
-    Jiaoyan is a Senior Lecturer (Associate Professor) in Department of Computer Science, The University of Manchester.
+    Jiaoyan is a Senior Lecturer (~Associate Professor) in Department of Computer Science, The University of Manchester.
     Before that, he was a Lecturer in Manchester from 2022, a Senior Researcher in Department of Computer Science, University of Oxford from 2017 (with <A href="http://www.cs.ox.ac.uk/ian.horrocks/">Prof. Ian Horrocks</A>), and a postdoctoral in Heidelberg University.
     Jiaoyan got his PhD and bachelor degrees both in Zhejiang University on Computer Science and Technology. He was a visiting PhD in Department of Informatics, Zurich University from 2014 to 2015.
 </P>
@@ -151,7 +151,7 @@ Research Interests
     <li style="margin-bottom:5px">Membership of EPSRC Peer Review College (2023 - )</li>
     <li style="margin-bottom:5px">Co-organiser of the OAEI Track <A href="https://www.cs.ox.ac.uk/isg/projects/ConCur/oaei/">Bio-ML</A> in ISWC (2022 - 2024). </li>
     <li style="margin-bottom:5px">PC/SPC/Area Chair of ISWC, The Web Conference, NeurIPS, ARR, etc.</li>
-    <li style="margin-bottom:5px">Regular proposal reviewer for main research grant bodies in the UK and EU including ERC, DFG and NWO.</li>
+    <li style="margin-bottom:5px">Proposal reviewer for grant bodies including ERC, RAEng, DFG, NWO, etc.</li>
 
     <!--
     <li style="margin-bottom:5px">Member of AMS Network on Neurosymbolic AI for Medicine (2024 - )</li>
